--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="script.js"></script>
 	<link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
 	<div class="container">
@@ -20,15 +21,18 @@
 			
 			<div class="panel">
 				<p>Simon</p>
-			<div class="count"></div>
+			<div class="count">00</div>
 			<div class="start"></div>
 			<div class="strict"></div>
-			<div class="power"></div>
-
+			<br><br>
+			<!-- Rounded switch -->
+			<input type="checkbox" class="power">On / Off
+			
 			</div>
 
 		</div>
 
 	</div>
+
 </body>
 </html>
