--- a/index.html
+++ b/index.html
@@ -10,25 +10,22 @@
 <body>
 	<div class="container">
 		
-		<div class="game">
-			<div class="btn-green"></div>
-			<div class="btn-red"></div>
-			<div class="btn-yellow"></div>
-			<div class="btn-blue"></div>
+		<div class="game disabled">
+			<div class="btn-green" id="1"></div>
+			<div class="btn-red" id="2"></div>
+			<div class="btn-yellow" id="3"></div>
+			<div class="btn-blue" id="4"></div>
 		</div>
 
 		<div class="console">
 			
-			<div class="panel">
+			<div class="panel disabled">
 				<p>Simon</p>
 			<div class="count">00</div>
 			<div class="start"></div>
 			<div class="strict"></div>
-			<br><br>
-			<!-- Rounded switch -->
-			<input type="checkbox" class="power">On / Off
-			
 			</div>
+			<input type="checkbox" class="power">On / Off
 
 		</div>
 
